[gd_scene load_steps=4 format=2]

[ext_resource path="res://Obstacles/FireShooter/FireShooter.gd" type="Script" id=1]
[ext_resource path="res://Fire/Fire.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 14.5915

[node name="FireShooter" type="Node2D" groups=[
"Enemies",
]]
script = ExtResource( 1 )

[node name="Shoot_Timer" type="Timer" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Flash_Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Fire" parent="." instance=ExtResource( 2 )]

[connection signal="timeout" from="Shoot_Timer" to="." method="_on_Shoot_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[editable path="Fire"]
